--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "http://*/*",
     "https://*/*"
   ],
+  "icons": { 
+   "128": "icon128.png" 
+  },
   "content_scripts": [
     {
       "matches": [
