--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Backlog Power Ups",
   "version": "0.0.1",
   "manifest_version": 2,
+  "default_locale": "en",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
