--- a/manifest.json
+++ b/manifest.json
@@ -57,6 +57,15 @@
       ],
       "all_frames": true,
       "js": ["libs/jquery.js", "extend-desc/extend-desc.js"]
+    },
+    {
+      "matches": [
+        "https://*.backlog.jp/wiki/*/*", 
+        "https://*.backlogtool.com/wiki/*/*", 
+        "https://*.backlog.com/wiki/*/*"
+      ],
+      "all_frames": true,
+      "js": ["libs/jquery.js", "child-page/child-page.js"]
     }
   ]
 }
