--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "Backlog Power Ups",
+  "name": "__MSG_app_name__",
+  "description": "__MSG_app_description__",
   "version": "0.0.1",
   "manifest_version": 2,
   "default_locale": "en",
