--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,7 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
-    "cookies",
-    "webRequest",
-    "storage",
-    "https://*.backlogtool.com/*",
-    "https://*.backlog.com/*",
-    "https://*.backlog.jp/*"
+    "storage"
   ],
   "icons": { 
    "128": "icon128.png" 
