--- a/manifest.json
+++ b/manifest.json
@@ -80,6 +80,15 @@
     },
     {
       "matches": [
+        "https://*.backlog.jp/find/*",
+        "https://*.backlogtool.com/find/*",
+        "https://*.backlog.com/find/*"
+      ],
+      "all_frames": true,
+      "js": ["libs/jquery.js", "libs/power-ups.js", "plugins/customized-issue-list/customized-issue-list.js"]
+    },
+    {
+      "matches": [
         "https://*.backlog.jp/wiki/*/*", 
         "https://*.backlogtool.com/wiki/*/*", 
         "https://*.backlog.com/wiki/*/*"
