--- a/manifest.json
+++ b/manifest.json
@@ -89,6 +89,16 @@
     },
     {
       "matches": [
+        "https://*.backlog.jp/find/*",
+        "https://*.backlogtool.com/find/*",
+        "https://*.backlog.com/find/*"
+      ],
+      "all_frames": true,
+      "css": ["plugins/total-time/total-time.css"],
+      "js": ["libs/jquery.js", "libs/power-ups.js", "plugins/total-time/total-time.js"]
+    },
+    {
+      "matches": [
         "https://*.backlog.jp/wiki/*/*", 
         "https://*.backlogtool.com/wiki/*/*", 
         "https://*.backlog.com/wiki/*/*"
