--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
-    "storage"
+    "storage",
+    "https://*/*"
   ],
   "icons": { 
    "128": "icon128.png" 
@@ -96,6 +97,15 @@
       "all_frames": true,
       "css": ["plugins/total-time/total-time.css"],
       "js": ["libs/jquery.js", "libs/power-ups.js", "plugins/total-time/total-time.js"]
+    },
+    {
+      "matches": [
+        "https://*.backlog.jp/view/*",
+        "https://*.backlogtool.com/view/*",
+        "https://*.backlog.com/view/*"
+      ],
+      "all_frames": true,
+      "js": ["libs/jquery.js", "libs/power-ups.js", "plugins/url-preview/url-preview.js"]
     },
     {
       "matches": [
