--- a/manifest.json
+++ b/manifest.json
@@ -142,7 +142,7 @@
         "https://*.backlog.com/find/*",
         "https://*.backlog.com/dashboard*"
       ],
-      "js": ["libs/clipboard.min.js", "libs/power-ups.js"]
+      "js": ["libs/clipboard.min.js", "libs/power-ups.js", "plugins/copy-issue-keys-and-subjects/copy-issue-keys-and-subjects.js"]
     },
     {
       "matches": [
