--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
   "name": "__MSG_app_name__",
   "description": "__MSG_app_description__",
-  "version": "0.0.22",
-  "manifest_version": 2,
+  "version": "0.0.23",
+  "manifest_version": 3,
   "default_locale": "en",
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "permissions": [
     "tabs",
     "storage",
@@ -13,17 +12,21 @@
   "icons": { 
    "128": "icon128.png" 
   },
-  "page_action": {
+  "action": {
     "default_icon": "icon128.png",
     "default_title": "Backlog Power Ups",
     "default_popup" : "popup/popup.html"
   },
   "background":{
-    "scripts" : [ "background.js" ]
+    "service_worker": "background.js"
   },
   "web_accessible_resources": [
-    "plugins/board-oneline/board-oneline-style.css"
-  ],
+    {
+      "resources": [
+        "plugins/board-oneline/board-oneline-style.css"
+      ],
+      "matches": [ "https://*/*"]
+    }],
   "content_scripts": [
     {
       "matches": [
