--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 	"packageManager": "npm@11.5.2+sha512.aac1241cfc3f41dc38780d64295c6c6b917a41e24288b33519a7b11adfc5a54a5f881c642d7557215b6c70e01e55655ed7ba666300fd0238bc75fb17478afaf3",
 	"devDependencies": {
 		"@types/jquery": "^3.3.1",
+		"@types/pako": "^2.0.3",
 		"@wxt-dev/auto-icons": "^1.0.2",
 		"@wxt-dev/i18n": "^0.2.4",
 		"@wxt-dev/module-vue": "^1.0.2",
 		"wxt": "^0.20.7"
 	},
 	"dependencies": {
+		"clipboard": "^2.0.4",
 		"jquery": "^3.3.1",
+		"pako": "^2.1.0",
 		"vue": "^3.5.18"
 	}
 }
