--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "backlog-power-ups",
-	"version": "0.0.0",
+	"version": "0.0.25",
 	"private": true,
 	"type": "module",
 	"scripts": {
 		"build": "wxt build",
 		"dev": "wxt",
+        "zip": "wxt zip",
 		"postinstall": "wxt prepare"
 	},
 	"packageManager": "npm@11.5.2+sha512.aac1241cfc3f41dc38780d64295c6c6b917a41e24288b33519a7b11adfc5a54a5f881c642d7557215b6c70e01e55655ed7ba666300fd0238bc75fb17478afaf3",
