--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
 		"clipboard": "2.0.4",
 		"jquery": "3.3.1",
 		"pako": "^2.1.0",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
 		"vue": "^3.5.18"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.4",
+		"@tsconfig/vite-react": "^7.0.0",
 		"@types/jquery": "^3.3.1",
 		"@types/pako": "^2.0.3",
+		"@types/react": "^19.1.9",
+		"@types/react-dom": "^19.1.7",
 		"@wxt-dev/auto-icons": "^1.0.2",
 		"@wxt-dev/i18n": "^0.2.4",
-		"@wxt-dev/module-vue": "^1.0.2",
+		"@wxt-dev/module-react": "^1.1.3",
 		"lefthook": "^1.12.2",
 		"sort-package-json": "^3.4.0",
 		"wxt": "^0.20.7"
