--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@wxt-dev/module-react": "^1.1.3",
 		"lefthook": "^1.12.2",
 		"sort-package-json": "^3.4.0",
+		"typescript": "^5.9.2",
 		"wxt": "^0.20.7"
 	},
 	"packageManager": "npm@11.5.2+sha512.aac1241cfc3f41dc38780d64295c6c6b917a41e24288b33519a7b11adfc5a54a5f881c642d7557215b6c70e01e55655ed7ba666300fd0238bc75fb17478afaf3"
