--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"clipboard": "2.0.4",
 		"htm": "^3.1.1",
 		"jquery": "3.3.1",
-		"pako": "^2.1.0",
+		"plantuml-encoder": "^1.4.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"vhtml": "^2.2.0",
@@ -23,7 +23,7 @@
 		"@biomejs/biome": "^2.1.4",
 		"@tsconfig/vite-react": "^7.0.0",
 		"@types/jquery": "^3.3.1",
-		"@types/pako": "^2.0.3",
+		"@types/plantuml-encoder": "^1.4.2",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
 		"@types/vhtml": "^2.2.9",
