--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"zip": "wxt zip"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.7",
 		"clipboard": "2.0.4",
 		"htm": "^3.1.1",
 		"jquery": "3.3.1",
