--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"clipboard": "2.0.4",
 		"htm": "^3.1.1",
 		"jquery": "3.3.1",
+		"minimatch": "^10.0.3",
 		"plantuml-encoder": "^1.4.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
