--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@headlessui/react": "^2.2.7",
 		"clipboard": "2.0.4",
+		"consola": "^3.4.2",
 		"htm": "^3.1.1",
 		"jquery": "3.3.1",
 		"minimatch": "^10.0.3",
