--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"htm": "^3.1.1",
 		"jquery": "3.3.1",
 		"minimatch": "^10.0.3",
+		"p-debounce": "^4.0.0",
 		"plantuml-encoder": "^1.4.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
