--- a/.github/workflows/submit.yaml
+++ b/.github/workflows/submit.yaml
@@ -33,7 +33,7 @@ jobs:
           node-version: 24
           cache: npm
 
-      - name: configure Git
+      - name: configure git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
@@ -75,13 +75,13 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - uses: actions/download-artifact@v5
         with:
           path: .output
 
-      - name: configure Git
+      - name: configure git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
