--- a/.github/workflows/submit.yaml
+++ b/.github/workflows/submit.yaml
@@ -90,7 +90,7 @@ jobs:
         run: npm version ${{ needs.build.outputs.new_tag }}
 
       - name: submit to web store
-        run: npx wxt submit
+        run: npx -y wxt submit
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DRY_RUN: ${{ inputs.environment == 'dry-run' }}
