--- a/.github/workflows/submit.yaml
+++ b/.github/workflows/submit.yaml
@@ -82,6 +82,10 @@ jobs:
         with:
           path: .output/
 
+      - run: |
+          sudo apt-get install -y tree
+          tree
+
       - name: configure git
         run: |
           git config user.name "github-actions[bot]"
